# Audio-Workbench

./: .gitattributes  .gitignore  CHANGELOG.md  DEVELOPER.md  LICENSE  README.adoc  README.md  REFACTORING.md  index.html  mkdocs.yml  package-lock.json  package.json  tsconfig.json  tsconfig.types.json  vite.config.js
.githooks/: pre-push
.github/: FUNDING.yml  actions_api_runs.json  actions_api_runs_after.json  actions_api_runs_after_push.json  actions_api_runs_latest.json  actions_runs_now.json  ci_char_checks.txt  dependabot.yml  run_24424400338_jobs.json  run_24424572150_jobs.json  tag_ref_after.json  tag_ref_v0.3.6.json  tag_repush2.txt  tag_repush_result.txt  workflows_api.json
.github/workflows/: ci.yml  pages.yml  update-birdnet-taxonomy.yml
demo/: desktop-app.html  index.html  labeling-app.css  labeling-app.html  labeling-app.legacy.css  stories.js  storybook.html  vite.demo.config.js  xc-export-modal.js
demo/lib/: about-panel.js  analysis-backend-config.js  annotator-profile.js  birdnet-panel.js  context-menu.js  custom-tag-store.js  desktop-runtime-info.js  editable-select.js  explore-panel.js  geo-map-modal.js  label-list.js  label-table.js  project-repository-runtime.js  properties-panel.js  recording-explorer.js  recording-manager.js  reference-calls-modal.js  resize-handle.js  session-sets.js  sidebar.js  snr-computer.js  spectrogram-panel.js  taxonomy-ui.js  xc-panel.js
demo/samples/: README.md
docs/: deployment.md  future-plans.md  index.md  python-integration.md
docs/intended-behavior/: labeling-flow.md
docs/labeling/: index.md  python-integration.md  shortcuts.md  species-format.md  xeno-canto-format.md
githooks/: pre-push
platform/: .env.test.example  PLAN-WAVE1-CLOSEOUT.md  local-testenv.mjs
platform/adr/: 001-db-choice.md  002-auth-choice.md  003-job-processing.md
platform/api/: Dockerfile  OIDC-DEV.md  package-lock.json  package.json
platform/contracts/: CONTRACT-GOVERNANCE.md  openapi.yaml
platform/db/: README.md  package-lock.json  package.json
platform/docker/: docker-compose.test.yml
platform/keycloak/: realm-audio-workbench.json  realm-signavis.json
platform/tests/: vertical-slice.local.test.mjs
platform/worker/: package.json
python-wrapper/: README.md  demo_colab.ipynb  demo_colab_hero.ipynb  demo_gradio.py  demo_streamlit.py  pyproject.toml
python-wrapper/audio_workbench/: __init__.py  renderer.py  widget.py
python-wrapper/audio_workbench/assets/: __init__.py  birdnet-player.css  birdnet-player.iife.js  widget.js
python-wrapper/audio_workbench_player/: __init__.py  renderer.py
python-wrapper/audio_workbench_player/assets/: birdnet-player.css  birdnet-player.iife.js
python-wrapper/signavis/: __init__.py  renderer.py  widget.py
python-wrapper/signavis/assets/: widget.js
python-wrapper/tests/: test_renderer.py  test_widget.py
scripts/: birdnet_sidecar.py  build-birdnet-taxonomy.js  build.sh  check-dist-sync.sh  check-version-sync.sh  dev-desktop-platform-local.mjs  embedding_sidecar.py  generate-types.js  ignore-styles-loader.mjs  install-githooks.js  mock-analysis-server.mjs  postinstall.js  publish.sh  release.sh  run-tests.mjs  setup-git-hooks.sh  sync-assets.sh  sync-version.js  sync-version.sh  xc_set_scraper.py
src/: AudioEngine.js  BirdNETPlayer.js  FrequencyViewport.js  PlayerState.js  PresetManager.js  SpectrogramCache.js  SpectrogramController.js  annotations.js  app.js  audioTransforms.js  birdnetInference.js  constants.js  coordinateSystem.js  daily-tips.js  dsp.js  editable-select.js  gestures.js  interactionState.js  modal-manager.js  player.css  spectrogram.js  spectrogram.worker.js  spectrolipiEngine.js  taxonomyResolver.js  template.js  transportState.js  ui.js  undoStack.js  utils.js  vite-env.d.ts  waveform.js  xcHelpers.js  xenoCantoApi.js  xenoCantoRecordingsApi.js
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/proto/analysis/v1/: analysis.proto
src-tauri/proto/jobs/v1/: jobs.proto
src-tauri/proto/projects/v1/: projects.proto
src-tauri/src/: connection_manager.rs  corpus_store.rs  lib.rs  main.rs  project_store.rs
src-tauri/src/commands/: analysis_jobs.rs  assets.rs  connection.rs  corpus.rs  corpus_analysis.rs  grpc.rs  mod.rs  projects.rs  recordings.rs  runtime_info.rs  xc_import.rs
src-tauri/src/grpc/: mod.rs
src-tauri/src/helpers/: job.rs  mod.rs  path.rs  time.rs
src/app/: BirdNETPlayer.ts  FrequencyViewport.ts  PlayerState.ts  PluginRegistry.ts  SpectrogramController.ts  SpectrogramTileManager.ts  ViewportManager.ts  analysis-backend-config.ts  annotator-profile.ts  bindUiControllers.ts  custom-tag-store.ts  desktop-app.ts  domRefs.ts  interactionState.ts  recording-manager.ts  session-sets.ts
src/domain/: PresetManager.ts  annotations.ts  audioTransforms.ts  coordinateSystem.ts  dsp.ts  spectralFeatures.ts  spectrogram.ts  transportState.ts  undoStack.ts
src/infrastructure/: SpectrogramCache.ts  birdnetInference.ts  (+2 more)
tests/: analysis-backend-e2e-smoke.test.ts  analysis-backend.test.ts  analysis-proto-gateway-mapping.test.ts  audio-engine.test.mjs  bench-spectrogram.mjs  bulk-edit-tags.test.mjs  coordinate-system.test.mjs  corpus-adapter.test.mjs  corpus-types.test.mjs  dsp.test.mjs  frequency-zoom-controller.test.mjs  headless.test.mjs  interaction-state.test.mjs  label-editor.scientificname.test.mjs  label-lock.test.mjs  mock-audio-engine.test.mjs  package-files.test.mjs  player-state.test.mjs  plugin-registry.test.ts  project-repository.test.ts  properties-panel.test.mjs  properties-tag-merge.test.mjs  readme.test.mjs  recording-manager.test.mjs  session-sets.test.mjs  shared-helpers.test.mjs  snr-computer.test.mjs  spectrogram-utils.test.mjs  spectrolipi-engine.test.mjs  stamp-mode.test.mjs  storage.test.mjs  taxonomy-resolver.test.mjs  toolbar-controller.test.mjs  transport-state.test.mjs  undo-stack.test.mjs  viewport-manager.test.mjs  viewport.test.mjs  waveform-renderer.test.mjs  xeno-canto-api.test.mjs
types/: index.d.ts  scss.d.ts  tauri-api.d.ts
(+174 files in other folders)
