[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "audio-workbench"
version = "0.0.4"
description = "Python wrapper for Audio Workbench Player (HTML/Streamlit embedding)"
readme = { file = "README.md", content-type = "text/markdown" }
requires-python = ">=3.9"
authors = [{ name = "Perch Contributors" }]
license = "AGPL-3.0-only"
license-files = ["LICENSE"]
keywords = ["audio", "player", "streamlit", "jupyter", "embed", "waveform", "spectrogram"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.9",
  "Operating System :: OS Independent"
]
urls = { "Homepage" = "https://github.com/LimitlessGreen/Audio-Workbench", "Repository" = "https://github.com/LimitlessGreen/Audio-Workbench", "Issues" = "https://github.com/LimitlessGreen/Audio-Workbench/issues" }

[project.optional-dependencies]
streamlit = ["streamlit>=1.30"]
gradio = ["gradio>=4.0"]

[tool.setuptools]
package-dir = {"" = "."}

[tool.setuptools.packages.find]
where = ["."]
include = ["audio_workbench*"]

[tool.setuptools.package-data]
"audio_workbench.assets" = ["*.js", "*.css"]
