[package]
name = "audio-workbench"
version = "0.6.2"
edition = "2021"
description = "Audio Workbench – desktop shell"
license = "AGPL-3.0-only"

[features]
default = []
grpc = ["dep:tonic", "dep:tokio", "dep:prost"]

# Lib crate so commands can be integration-tested without a running Tauri app.
[lib]
name = "audio_workbench_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.12"
protoc-bin-vendored = "3"

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
tauri-plugin-shell  = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tonic = { version = "0.12", features = ["transport"], optional = true }
tokio = { version = "1", features = ["rt-multi-thread", "macros"], optional = true }
prost = { version = "0.13", optional = true }
