[package]
name = "signavis"
version = "0.7.6"
edition = "2021"
description = "SignaVis – desktop shell"
license = "AGPL-3.0-only"

[features]
default = ["embedded-db"]
grpc = ["dep:tonic", "dep:prost", "dep:tracing", "dep:tracing-subscriber"]
embedded-db = ["surrealdb/kv-surrealkv"]
mem-db      = ["surrealdb/kv-mem"]
server-db   = ["surrealdb/protocol-ws"]

# Lib crate so commands can be integration-tested without a running Tauri app.
[lib]
name = "signavis_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
tonic-build = "0.12"
protoc-bin-vendored = "3"

[dependencies]
tauri          = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs     = "2"
tauri-plugin-shell  = "2"
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
tokio   = { version = "1", features = ["rt-multi-thread", "macros", "time", "process", "io-util"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tonic   = { version = "0.12", features = ["transport"], optional = true }
prost   = { version = "0.13", optional = true }
tracing = { version = "0.1", optional = true }
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"], optional = true }
surrealdb = { version = "2", default-features = false, features = ["rustls"] }
walkdir   = "2"
sha2      = "0.10"
hex       = "0.4"
uuid      = { version = "1", features = ["v4"] }




